2021-09-01  Alex Christensen  <achristensen@webkit.org>

        PerformanceNavigationTiming should be instantiated before scripts run then updated when response finishes
        https://bugs.webkit.org/show_bug.cgi?id=229751

        Reviewed by Chris Dumez.

        * web-platform-tests/navigation-timing/nav2_test_response_end_and_duration_before_during_and_after_load_event-expected.txt: Added.
        * web-platform-tests/navigation-timing/nav2_test_response_end_and_duration_before_during_and_after_load_event.html: Added.
        * web-platform-tests/navigation-timing/resources/respond_slowly.py: Added.
        (main):

2021-09-01  Chris Dumez  <cdumez@apple.com>

        Add support for ServiceWorkerGlobalScope.serviceWorker
        https://bugs.webkit.org/show_bug.cgi?id=229720

        Reviewed by Youenn Fablet.

        Rebaseline WPT tests that are now passing.

        * web-platform-tests/html/cross-origin-opener-policy/popup-coop-by-sw.https-expected.txt:
        * web-platform-tests/service-workers/service-worker/global-serviceworker.https.any.serviceworker-expected.txt:

2021-09-01  Myles C. Maxfield  <mmaxfield@apple.com>

        document.fonts.size needs to update style so it doesn't return stale values
        https://bugs.webkit.org/show_bug.cgi?id=229644

        Reviewed by Darin Adler.

        * web-platform-tests/css/css-font-loading/fontfaceset-update-after-stylesheet-change-expected.txt:

2021-09-01  Myles C. Maxfield  <mmaxfield@apple.com>

        CSSFontFaceSet.clear() should not clear CSS-connected members
        https://bugs.webkit.org/show_bug.cgi?id=229643

        Reviewed by Darin Adler.

        * web-platform-tests/css/css-font-loading/fontfaceset-clear-css-connected-expected.txt:

2021-08-13  Sergio Villar Senin  <svillar@igalia.com>

        [css-flexbox] Add initial support for css-align-3 positional alignment properties
        https://bugs.webkit.org/show_bug.cgi?id=229074

        Reviewed by Simon Fraser.
