@@ -44,6 +44,7 @@ List of files:
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/initial-color-background-001-expected.html
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/initial-color-background-001.html
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/layer-basic.html
+/LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/layer-import.html
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/revert-val-001-expected.xht
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/revert-val-001.html
 /LayoutTests/imported/w3c/web-platform-tests/css/css-cascade/revert-val-002-expected.xht
